test/corpus/defmacro.txt
================================================================================
defmacro full
================================================================================

(defmacro add (x y)
  (declare (number x) (number y))
  (declare (number y))
  "add 2 numbers"
  (+ x y))

--------------------------------------------------------------------------------

(source
  (defmacro name: (symbol) (lambda_list (symbol) (symbol))
    (declare (list (symbol) (symbol)) (list (symbol) (symbol)))
    (declare (list (symbol) (symbol)))
    (documentation)
    (list (symbol) (symbol) (symbol)))
  )


================================================================================
defmacro - single string in body
================================================================================

(defmacro msg ()
  "add 2 numbers")

--------------------------------------------------------------------------------

(source
  (defmacro name: (symbol) (lambda_list)
    (string))
  )

================================================================================
defmacro - empty body
================================================================================

(defmacro nothing ())

--------------------------------------------------------------------------------

(source
  (defmacro name: (symbol) (lambda_list))
  )

================================================================================
defmacro - body starts with non-string
================================================================================

(defmacro two () 1 2)

--------------------------------------------------------------------------------

(source
  (defmacro name: (symbol) (lambda_list) 
    (number)
    (number))
  )

================================================================================
defmacro - documented with body
================================================================================

(defmacro doit () 
  "does something"
  (something)
  'done)

--------------------------------------------------------------------------------

(source
  (defmacro name: (symbol) (lambda_list) 
    (documentation)
    (list (symbol))
    (quote (symbol)))
  )
