test/corpus/list.txt
================================================================================
flat list
================================================================================

()
(a)
(a b c)

--------------------------------------------------------------------------------

(source
(list)
(list (symbol))
(list (symbol) (symbol) (symbol))
)

================================================================================
deep list
================================================================================

(())
((a))
(a (b) c)
(a (b (c)))

--------------------------------------------------------------------------------

(source
(list (list))
(list (list (symbol)))
(list (symbol) (list (symbol)) (symbol))
(list (symbol) (list (symbol) (list (symbol))))
)

================================================================================
whitespace in lists
================================================================================

( a ) 
( a)
(a       b)
(a )
(a
)
(a
b)

--------------------------------------------------------------------------------

(source
(list (symbol))
(list (symbol))
(list (symbol) (symbol))
(list (symbol))
(list (symbol))
(list (symbol) (symbol))
)

================================================================================
weird lists
================================================================================

(\(\))
(\))
\(()

--------------------------------------------------------------------------------

(source
(list (symbol))
(list (symbol))
(symbol) (list)
)

================================================================================
brackets do not enclose lists, but constitute symbols
================================================================================

[]
[a]
[a b]

--------------------------------------------------------------------------------

(source
(symbol)
(symbol)
(symbol) (symbol)
)

================================================================================
braces do not enclose lists, but constitute symbols
================================================================================

{}
{a}
{a b}

--------------------------------------------------------------------------------

(source
(symbol)
(symbol)
(symbol) (symbol)
)
